--- a/Host.html
+++ b/Host.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 </head>
-<body bgcolor="grey">
-<h2>hosthtml.live</h2>
+<body style="background-color: grey; text-align: center;">
+<h2 text-align:center>hosthtml.live</h2>
 <p>Related Searches</p>
 
 <div style="
